<resources>
    <string name="app_name">DiscussIt</string>
    <string name="harshad">Harshad</string>
    <string name="search">Search</string>
    <string name="ask">Ask</string>

    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="city">city</string>
    <string name="questiion">questiion</string>
    <string name="answer">answer</string>
    <string name="todo">TODO</string>
    <string name="pune">Pune</string>
    <string name="this_is_question">This is question ?</string>
    <string name="this_is_answer_to_the_above_question_and_it_will_be_fetch_directly_from_the_firebase_database_and_i_really_dont_know_the_actual_size_of_the_ans">This is answer to the above question and it will be fetch directly from the firebase database and I really dont know the actual size of the ans</string>
    <string name="_31_1k">31.1k</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancle">cancle</string>
    <string name="upvote">upvote</string>


</resources>
