<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/relative_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:id="@+id/name_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/profile"
                android:layout_toRightOf="@+id/profile"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/harshad"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/other_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/pune"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:id="@+id/que_and_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative_1"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/this_is_question"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/this_is_answer_to_the_above_question_and_it_will_be_fetch_directly_from_the_firebase_database_and_i_really_dont_know_the_actual_size_of_the_ans"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/required_img"
                    android:layout_width="wrap_content"
                    android:layout_height="198dp"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img2" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/que_and_ans">

            <Button
                android:id="@+id/upVote_btn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>

            <TextView
                android:id="@+id/votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_31_1k"

                ></TextView>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/darker_gray" />


</LinearLayout>