<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddQuestion"
    android:orientation="vertical"
    android:id="@+id/activity_add_question"
    >

    <include layout="@layout/toolbar"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp">
    <RelativeLayout
        android:id="@+id/relative_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            />

        <LinearLayout
            android:id="@+id/name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/profile"
            android:orientation="vertical">


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/harshad"
                android:textColor="@color/black"
                android:textSize="13sp" />


        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/que_and_ans"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_1"
        android:layout_marginTop="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Start your question with 'What','How',
            'why',etc."
            android:textColorLink="#00090808"
            android:importantForAutofill="no"
            android:autofillHints=""
            android:id="@+id/addQuestion"
            ></EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tag1"
            android:hint="Tag1"></EditText>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tag2"
            android:hint="Tag2"></EditText>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tag3"
            android:hint="Tag3"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/que_and_ans"
        >

        <Button
            android:id="@+id/add_que"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add"
            ></Button>
    </LinearLayout>
</LinearLayout>

</LinearLayout>